Enable preview features in Build program